--- a/resources/views/properties/index.twig
+++ b/resources/views/properties/index.twig
@@ -59,11 +59,12 @@ Property List
     <!-- End Pagination Buttons -->
 
     <!-- Header Area -->
-    <div class="mt-8 flex items-center">
+    <div class="mt-8">
         <h1 class="text-2xl text-gray-700">Showing {{ items_per_page }} of {{ property_count }} Properties</h1>
-
+    </div>
+    <div class="mt-2 flex items-center">
         <a href="{{ url_for('properties.create') }}"
-            class="ml-3 px-3 py-1 bg-blue-200 rounded-full text-xs uppercase hover:shadow-outline">Add Property</a>
+            class="px-3 py-1 bg-blue-200 rounded-full text-xs uppercase hover:shadow-outline">Add Property</a>
 
         <a href="{{ url_for('properties.refresh-from-api') }}" onclick="confirmReload(event)" id="load-from-api"
             class="ml-3 px-3 py-1 bg-gray-300 text-gray-600 text-xs rounded-full uppercase hover:shadow-outline">Reload
