--- a/resources/views/properties/index.twig
+++ b/resources/views/properties/index.twig
@@ -1,81 +1,37 @@
 {% extends "layouts/app.twig" %}
 
 {% block title %}
-Property List
+Property Listing
 {% endblock title %}
 
 {% block content %}
 
 <div class="container px-2 mx-auto">
-
-    <!-- Pagination Buttons -->
-    <div class="mt-8 flex justify-center items-center">
-        <!-- First page -->
-        {% if first_page != current_page %}
-        <a href="{{ url_for('properties.index') }}?page={{ first_page }}" class="mr-2">
-            <span
-                class="px-4 py-2 text-xs uppercase bg-blue-400 text-blue-100 rounded-full flex items-center justify-center">
-                First
-            </span>
-        </a>
-        {% endif %}
-
-        <!-- Previous page -->
-        {% if previous_page %}
-        <a href="{{ url_for('properties.index') }}?page={{ previous_page }}" class="mr-2">
-            <span
-                class="px-4 py-2 text-xs uppercase bg-blue-400 text-blue-100 rounded-full flex items-center justify-center">
-                {{ previous_page }}
-            </span>
-        </a>
-        {% endif %}
-
-        <!-- Current page -->
-        <span
-            class="px-4 py-2 text-xs uppercase bg-gray-200 text-gray-500 rounded-full flex items-center justify-center">
-            {{ current_page }}
-        </span>
-
-        <!-- Next page -->
-        {% if next_page %}
-        <a href="{{ url_for('properties.index') }}?page={{ next_page}}" class="ml-2">
-            <span
-                class="px-4 py-2 text-xs uppercase bg-blue-400 text-blue-100 rounded-full flex items-center justify-center">
-                {{ next_page }}
-            </span>
-        </a>
-        {% endif %}
-
-        <!-- Last page -->
-        {% if last_page != current_page %}
-        <a href="{{ url_for('properties.index') }}?page={{ last_page }}" class="mr-2">
-            <span
-                class="px-4 py-2 text-xs uppercase ml-2 bg-blue-400 text-blue-100 rounded-full flex items-center justify-center">
-                Last
-            </span>
-        </a>
-        {% endif %}
-    </div>
-    <!-- End Pagination Buttons -->
+    {# Pagination #}
+    {% include "properties/_pagination.twig" %}
 
     <!-- Header Area -->
-    <div class="mt-8">
-        <h1 class="text-2xl text-gray-700">Showing {{ items_per_page }} of {{ property_count }} Properties</h1>
-    </div>
-    <div class="mt-2 flex items-center">
-        <a href="{{ url_for('properties.create') }}"
-            class="px-3 py-1 bg-blue-200 rounded-full text-xs uppercase hover:shadow-outline">Add Property</a>
+    <div class="text-center">
+        <div class="mt-8">
+            <h1 class="text-lg text-gray-700">Showing {{ (current_page - 1) * items_per_page + 1 }} -
+                {{ current_page * items_per_page > property_count ? property_count : current_page * items_per_page }} of
+                {{ property_count }} Properties</h1>
+        </div>
+        <div class="mt-2 flex items-center justify-center">
+            <a href="{{ url_for('properties.create') }}"
+                class="px-3 py-1 bg-blue-200 rounded-full text-xs uppercase hover:shadow-outline">Add Property</a>
 
-        <a href="{{ url_for('properties.refresh-from-api') }}" onclick="confirmReload(event)" id="load-from-api"
-            class="ml-3 px-3 py-1 bg-gray-300 text-gray-600 text-xs rounded-full uppercase hover:shadow-outline">Reload
-            from API</a>
+            <a href="{{ url_for('properties.refresh-from-api') }}" onclick="confirmReload(event)" id="load-from-api"
+                class="ml-3 px-3 py-1 bg-gray-300 text-gray-600 text-xs rounded-full uppercase hover:shadow-outline">Reload
+                from API</a>
+        </div>
     </div>
     <!-- End Header Area -->
 
     <!-- Property Cards -->
-    <div class="-mb-3 -mr-3 mt-4 flex flex-wrap">
+    <div class="-mb-3 -mr-3 mt-8 flex flex-wrap">
         {% for property in properties %}
-        <div class="w-full sm:w-1/2 pr-3 pb-3">
+        <div class="w-full sm:w-1/2 lg:w-1/3 pr-3 pb-3">
             <a href="{{ url_for('properties.show', {'id': property.id}) }}">
                 <div class="p-4 h-full bg-white shadow rounded hover:shadow-outline">
                     <div class="flex ">
@@ -87,7 +43,8 @@ Property List
 
                         <div class="ml-4">
                             <p class="flex flex-wrap items-center text-xl text-gray-700 leading-tight">
-                                <span class="mr-2">{{ property.property_type }} in {{ property.town }} for {{ property.type |title }}</span>
+                                <span class="mr-2">{{ property.property_type }} in {{ property.town }} for
+                                    {{ property.type |title }}</span>
                             </p>
                             <p class="text-sm text-gray-500 leading-loose">&pound;{{ property.price }}</p>
                         </div>
@@ -99,55 +56,10 @@ Property List
     </div>
     <!-- End Property Cards -->
 
-    <!-- Pagination Buttons... Again -->
-    <div class="my-8 flex justify-center items-center">
-        <!-- First page -->
-        {% if first_page != current_page %}
-        <a href="{{ url_for('properties.index') }}?page={{ first_page }}" class="mr-2">
-            <span
-                class="px-4 py-2 text-xs uppercase bg-blue-400 text-blue-100 rounded-full flex items-center justify-center">
-                First
-            </span>
-        </a>
-        {% endif %}
-
-        <!-- Previous page -->
-        {% if previous_page %}
-        <a href="{{ url_for('properties.index') }}?page={{ previous_page }}" class="mr-2">
-            <span
-                class="px-4 py-2 text-xs uppercase bg-blue-400 text-blue-100 rounded-full flex items-center justify-center">
-                {{ previous_page }}
-            </span>
-        </a>
-        {% endif %}
-
-        <!-- Current page -->
-        <span
-            class="px-4 py-2 text-xs uppercase bg-gray-200 text-gray-500 rounded-full flex items-center justify-center">
-            {{ current_page }}
-        </span>
-
-        <!-- Next page -->
-        {% if next_page %}
-        <a href="{{ url_for('properties.index') }}?page={{ next_page}}" class="ml-2">
-            <span
-                class="px-4 py-2 text-xs uppercase bg-blue-400 text-blue-100 rounded-full flex items-center justify-center">
-                {{ next_page }}
-            </span>
-        </a>
-        {% endif %}
-
-        <!-- Last page -->
-        {% if last_page != current_page %}
-        <a href="{{ url_for('properties.index') }}?page={{ last_page }}" class="mr-2">
-            <span
-                class="px-4 py-2 text-xs uppercase ml-2 bg-blue-400 text-blue-100 rounded-full flex items-center justify-center">
-                Last
-            </span>
-        </a>
-        {% endif %}
+    {# Pagination #}
+    <div class="mb-8">
+        {% include "properties/_pagination.twig" %}
     </div>
-    <!-- End Pagination Buttons... Again -->
 </div>
 {% endblock content %}
 
