Refactored to use Guzzle Async Requests

--- a/resources/views/properties/index.twig
+++ b/resources/views/properties/index.twig
@@ -29,7 +29,7 @@ Property Listing
             <a href="{{ url_for('properties.create') }}"
                 class="px-3 py-1 bg-blue-200 rounded-full text-xs uppercase hover:shadow-outline">Add Property</a>
 
-            <a href="{{ url_for('properties.refresh-from-api') }}" onclick="confirmReload(event)" id="load-from-api"
+            <a href="{{ url_for('properties.refresh') }}" onclick="confirmReload(event)" id="load-from-api"
                 class="ml-3 px-3 py-1 bg-gray-300 text-gray-600 text-xs rounded-full uppercase hover:shadow-outline">Reload
                 from API</a>
         </div>
