--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -4,8 +4,51 @@
 
 {% block content %}
 
-<div class="container px-2 mx-auto mt-4">
+<div class="container px-2 mx-auto mt-4" id="app">
     <h1 class="text-2xl text-gray-600">Technical Challenge using Slim Framework</h1>
+    {# <button-counter inline-template>
+        <div>
+            <button @click="count++">You clicked me ${count} times.</button>
+            <ul>
+                <li v-for="todo in todos" >${todo.title}</li>
+            </ul>
+        </div>
+    </button-counter> #}
 </div>
 
 {% endblock content %}
+
+
+{% block scripts %}
+
+{# Bring VueJS in #}
+<script src="/js/vue.js"></script>
+
+{# Main script for page #}
+<script>
+
+    // Test Component
+    Vue.component('button-counter', {
+        data: function () {
+            return {
+                count: 0,
+                todos: []
+            }
+        },
+        created: async function () {
+            const response = await fetch('https://jsonplaceholder.typicode.com/todos')
+            this.todos = await response.json()
+        }
+    });
+
+    // Main App Instance
+    const app = new Vue({
+        el: '#app',
+        delimiters: ['${', '}'],
+        data: {
+            message: "Hello!"
+        },
+    });
+</script>
+
+{% endblock scripts %}
